--- a/app/app.css
+++ b/app/app.css
@@ -8,7 +8,14 @@
 
 html,
 body {
-  @apply bg-[#F0F4F8] dark:bg-gray-950;
+  @apply bg-linear-to-br
+         from-[#F8FAFC]
+         to-[#6366F1]/5;
+  /* from-[#E0E7FF]
+         via-[#FDF2F8]
+         to-[#F0F9FF]; */
+
+  /* background: linear-gradient(135deg, #f0f4f8 0%, #f8fafc 100%); */
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
